--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,6 +3,7 @@
   "name": "Tab Sorter",
   "version": "1.0.0",
   "description": "Rearrange your tabs by URL",
+  "permissions": ["tabs"],
 
   "browser_action": {
     "default_popup": "popup.html",
